--- a/bundles/couplingtool/.project
+++ b/bundles/couplingtool/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SecurityAnalysis</name>
+	<name>PatternSearchBasedCouplingFramework</name>
 	<comment></comment>
 	<projects>
 	</projects>
